# polsl-pk3

./: .gitignore
lab-01/: instructions.md  main.cpp  stack.h
lab-02/: instructions.md  main.cpp
lab-03/: dane.txt  instructions.md  main.cpp
lab-04/: colors.h  instructions.md  main.cpp
lab-05/: instructions.md  log.txt  main.cpp
project/: CMakeLists.txt  README.md
project/include/: colors.hpp  list.hpp  node.hpp  test.hpp
project/src/: main.cpp
